--- a/static/css/additional-style.css
+++ b/static/css/additional-style.css
@@ -275,8 +275,8 @@ h1.header-text {
 
 
 
-
-
+/*
+button register style*/
 a.cust-btn {
   position: absolute;
   top: 50%;
@@ -337,4 +337,147 @@ a.cust-btn span:nth-child(4) {
 a.cust-btn:hover span:nth-child(4) {
   bottom: 0;
   right: 0;
+}
+
+
+/*
+button choose indicator*/
+.btn.chs-del{
+    border-color: #6c757d;
+    border-radius: 100px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    padding: 11px 25px;
+    font-size: 12px;
+    color: mintcream;
+    background-color: #797b7f;
+}
+
+.btn.chs-del:hover{
+	background-color: #eee;
+    color: currentcolor;
+}
+
+.btn.chs-del.addit-cls {
+	background-color: #eee;
+    color: currentcolor;
+}
+
+.btn.chs-del.addit-cls:hover {
+    color: mintcream;
+    background-color: #797b7f;
+}
+
+
+/*button to question list*/
+a.go-choosen-list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+/*  height: 60px;*/
+  text-align: center;
+/*  line-height: 60px;*/
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border: 1px solid #3b3c41;;
+  font-size: 14px;
+  color: #3b3c41;;
+  transition: 0.5s;
+  overflow: hidden;
+  border-radius: 100px;
+  width: 65%;
+  background-color: #eee;
+  padding: 10px;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
+	box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+}
+a.go-choosen-list:hover {
+  color: #fff;
+}
+a.go-choosen-list span {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #797b7f;
+  transition: 0.5s;
+  z-index: -1;
+}
+a.go-choosen-list span:nth-child(1) {
+  top: -100%;
+  left: -100%;
+}
+a.go-choosen-list:hover span:nth-child(1) {
+  top: 0;
+  left: 0;
+}
+a.go-choosen-list span:nth-child(2) {
+  bottom: -100%;
+  left: -100%;
+}
+a.go-choosen-list:hover span:nth-child(2) {
+  bottom: 0;
+  left: 0;
+}
+a.go-choosen-list span:nth-child(3) {
+  top: -100%;
+  right: -100%;
+}
+a.go-choosen-list:hover span:nth-child(3) {
+  top: 0;
+  right: 0;
+}
+a.go-choosen-list span:nth-child(4) {
+  bottom: -100%;
+  right: -100%;
+}
+a.go-choosen-list:hover span:nth-child(4) {
+  bottom: 0;
+  right: 0;
+}
+
+
+
+
+.btn-grd-inverse.hor-grd {
+ background-image: -webkit-gradient(linear, left bottom, left top, from(#4c626d), color-stop(51%, #1e272b), to(#4c626d));
+ background-image: linear-gradient(to top, #ccc 0%, #777 51%, #ccc 100%);
+}
+
+.btn-grd-inverse {
+ background-image: -webkit-gradient(linear, left top, right top, from(#4c626d), color-stop(51%, #1e272b), to(#4c626d));
+ background-image: linear-gradient(to right, #4c626d 0%, #1e272b 51%, #4c626d 100%);
+}
+
+/*#ccc 0%, #777 51%, #ccc 100%*/
+
+.btn-grd-inverse {
+ background-size: 200% auto;
+ -webkit-transition: 0.5s ease-in-out;
+ transition: 0.5s ease-in-out;
+ color: #fff;
+ border-radius: 100px;
+}
+
+.btn-grd-inverse:hover {
+ background-position: right center;
+}
+
+.btn-grd-inverse.hor-grd {
+ background-size: auto 200%;
+}
+
+.btn-grd-inverse.hor-grd:hover{
+ background-position: bottom center;
+}
+
+a.btn.waves-effect.waves-light.hor-grd.btn-grd-inverse {
+    border: black;
+    letter-spacing: 2px;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
+	box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
 }
