--- a/account/templates/update.html
+++ b/account/templates/update.html
@@ -4,8 +4,8 @@
     <div class="section section-breadcrumbs">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h1>Изменение данных профиля</h1>
+                <div class="col-md-9">
+                    <h1 class="header-text">Изменение данных профиля</h1>
                 </div>
             </div>
         </div>
