--- a/calculating/templates/saved_result.html
+++ b/calculating/templates/saved_result.html
@@ -35,7 +35,7 @@
 					{% for result_of_digitalization in results_of_digitalization %}
 					<!-- UI - X Starts -->
 						<div class="ui-310">
-							<div class="container-fluid">
+							<div class="container-fluid saved-result">
 								<!-- Item -->
 								<div class="ui-item clearfix">
 									<!-- Heading -->
