--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% load static %}
-<!DOCTYPE html>
+<html>
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -23,7 +24,8 @@
 		<link rel="stylesheet" href="{% static 'css/main.css' %}">
 		<link rel="stylesheet" href="{% static 'css/additional-style.css' %}">
         <script src="{% static 'js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
-		<script>window.jQuery || document.write('<script src={% static "js/jquery-1.9.1.min.js" %}><\/script>')</script>
+<!--		<script>window.jQuery || document.write('<script src={% static "js/jquery-1.9.1.min.js" %}><\/script>')</script>-->
+		<script src="{% static 'js/jquery-1.9.1.min.js' %}"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -126,12 +128,12 @@
 			</div>
 
 		</div>
-		<script>
-				$(document).ready(function(){
+
+
 					{% block script %}
 					{% endblock %}
-				})
-	   	</script>
+
+
         <!-- Javascripts -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
