--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
         <!-- Javascripts -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+<!--        <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>-->
         <script src="{% static 'js/main-menu.js' %}"></script>
         <script src="{% static 'js/template.js' %}"></script>
         <script src="{% static 'js/jquery.fitvids.js' %}"></script>
