--- a/indicators/templates/contact.html
+++ b/indicators/templates/contact.html
@@ -17,10 +17,7 @@
 	        	<div class="row">
 	        		<div class="col-sm-7">
 	        			<!-- Map -->
-	        			<div id="contact-us-map">
-                           <iframe id='map' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.364107299455!2d27.595368315860373!3d53.92527488010443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf092c3c424f%3A0x466309fd7ba9352!2z0YPQuy4g0KHRg9GA0LPQsNC90L7QstCwIDI0LCDQnNC40L3RgdC6!5e0!3m2!1sru!2sby!4v1597437640623!5m2!1sru!2sby" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-	        			</div>
-							<!-- End Map -->
+                           <iframe id='map-contact' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.364107299455!2d27.595368315860373!3d53.92527488010443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf092c3c424f%3A0x466309fd7ba9352!2z0YPQuy4g0KHRg9GA0LPQsNC90L7QstCwIDI0LCDQnNC40L3RgdC6!5e0!3m2!1sru!2sby!4v1597437640623!5m2!1sru!2sby" width="100%" height="330"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 	        			<!-- Contact Info -->
 	        			<p class="contact-us-details">
 	        				<b>Адрес:</b> ул. Сурганова, 24, г. Минск 220012, Республика Беларусь
@@ -48,7 +45,7 @@
 								 	{% endfor %}
 								<div class="form-group">
 									<div class="col-sm-12">
-										<button type="submit" class="btn pull-right">Send</button>
+											<button type="submit" class="btn register pull-right">Отправить</button>
 									</div>
 								</div>
 		        			</form>
