--- a/calculating/templates/questionnaire.html
+++ b/calculating/templates/questionnaire.html
@@ -69,7 +69,7 @@
                                 {% endif %}
                                 {% for possible_answer in indicator.answerchoice_set.all %}
                                 <div class="row">
-                                    <div class="checkbox choice row">
+                                    <div class="checkbox choice">
                                         <label for="choice{{ forloop.counter }}">
                                         <input type="checkbox" name="choice" id="choice{{ forloop.counter }}" value="{{ possible_answer.value }}">
                                         <i class="fa fa-2x icon-checkbox"></i>
@@ -107,7 +107,7 @@
                                 {% endif %}
                                 {% for possible_answer in indicator.answerchoice_set.all %}
                                     <div class="row">
-                                        <div class="radio choice row">
+                                        <div class="radio choice">
                                             <label for="choice{{ forloop.counter }}">
                                             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ possible_answer.value }}">
                                             <i class="fa fa-2x icon-radio"></i>
